[build-system]
requires = ["setuptools"]
build-backend = "backend"
backend-path = ["build_scripts"]

[project]
name = "rt-5gms-application-server"
version = "1.2.0"
dependencies = [
    'urllib3 >= 1.25.3',
    'python-dateutil',
    'regex >= 2.5.0',
    'hypercorn >= 0.14.3',
    'fastapi >= 0.78.0',
    'python-multipart >= 0.0.5',
    'httpx[http2] >= 0.21.1',
    'h11 >= 0.11.0',
    'h2 >= 4.1.0',
    'aiofiles >= 0.7.0'
]
requires-python = ">=3.7"
scripts = { 5gms-application-server = "rt_5gms_as.app:main" }
authors = [
    { name = 'David Waring', email = 'david.waring2@bbc.co.uk' }
]
license = { file = "LICENSE" }
readme = "README.md"

[project.urls]
"Homepage" = "https://5g-mag.com/"
"Source" = "https://github.com/5g-mag/rt-5gms-application-server"

[tool.setuptools.packages.find]
where = ["src", "tests"]

[tool.setuptools.package-data]
"rt_5gms_as.proxies" = ["*.tmpl", "*.lua"]

[tool.setuptools.data-files]
'share/doc/rt-5gms-application-server' = ['docs/*', 'ATTRIBUTION_NOTICE']
'share/doc/rt-5gms-application-server/examples' = ['external/rt-common-shared/5gms/examples/*']
'lib/systemd/system' = ['systemd/5gms-application-server.service']
'lib/systemd/system-preset' = ['systemd/90-5gms-application-server.preset']
